# epilepsure

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  client_test.py  environment.yaml  epilepsy_env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  train_ppo.py
.github/workflows/: ci.yml  deploy-hf.yml
data/danger/: test_danger.npy
data/safe/: test_safe.npy
epilepsure/: env.py
scripts/: baseline_openai.py  evaluate.py  flicker_check.py  test_client.py  train.py
server/: Dockerfile  app.py  epilepsure_environment.py
tensorboard_logs/PPO_1/: events.out.tfevents.1775028139.AGNLZhp.3068.0
tensorboard_logs/PPO_2/: events.out.tfevents.1775029693.AGNLZhp.14032.0
tensorboard_logs/PPO_3/: events.out.tfevents.1775030160.AGNLZhp.4432.0
