[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
[project.scripts]
epilepsure-server = "server.app:main"
[project]
name = "epilepsure"
version = "2.0.0"
dependencies = [
    "openenv-core",
    "numpy",
    "opencv-python-headless",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "Pillow",
    "stable-baselines3",
    "shimmy",
    "gymnasium",
]
