[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "epilepsure"
version = "2.0.0"
description = "RL environment for photosensitive epilepsy content moderation"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "numpy",
    "opencv-python",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "Pillow",
    "stable-baselines3",
    "gymnasium",
    "tensorboard",
]

[project.scripts]
server = "server.app:main"
epilepsure-server = "server.app:main"
